--- a/courier-parent/courier-frontend/src/main/webapp/xhtml/baseMenuForAdmin.xhtml
+++ b/courier-parent/courier-frontend/src/main/webapp/xhtml/baseMenuForAdmin.xhtml
@@ -28,6 +28,9 @@
                              styleClass="ui-button-info" update="@form"/>
         </f:facet>
     </p:menubar>
+    <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+        <h2 style="text-align: center;">Nincs elég jogosultságod!</h2>
+    </div>
 </h:panelGroup>
 
 </html>
