--- a/courier-parent/courier-frontend/src/main/webapp/xhtml/cart.xhtml
+++ b/courier-parent/courier-frontend/src/main/webapp/xhtml/cart.xhtml
@@ -7,53 +7,34 @@
 <h:body>
     <h:form id="mainForm">
         <p:growl id="growl" showDetail="true" globalOnly="true"/>
-        <h:panelGroup rendered="#{!loggedInUserMBean.loggedIn}">
-            <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-                <h2 style="text-align: center;">Muszáj bejelentkezned!</h2>
-                <p:commandButton id="loginButton" oncomplete="PF('loginDialog').show()"
-                                 value="Login" icon="pi pi-fw pi-sign-in"
-                                 styleClass="ui-button-info" update="growl"/>
-            </div>
-        </h:panelGroup>
-
-        <p:menubar id="menuBar">
-            <f:facet name="options">
-                <p:button value="Home Page" outcome="/xhtml/index.xhtml" rendered="#{loggedInUserMBean.loggedIn}"
-                          styleClass="ui-button-info" style="margin-right: 10px"/>
-                <p:button value="Checkout Now" outcome="/xhtml/checkout.xhtml" rendered="#{loggedInUserMBean.loggedIn and !cartMBean.isEmptyList()}"
-                          styleClass="ui-button-info" style="margin-right: 10px"/>
-
-                <p:commandButton actionListener="#{loginRequestMBean.doLogout()}"
-                                 rendered="#{loggedInUserMBean.loggedIn}" value="Logout" icon="pi pi-fw pi-sign-out"
-                                 styleClass="ui-button-info" update="@form"/>
-            </f:facet>
-        </p:menubar>
+        <ui:include src="baseMenuForUser.xhtml"/>
 
         <h:panelGroup rendered="#{loggedInUserMBean.loggedIn and !loggedInUserMBean.admin}">
-            <p:dataTable id="table" value="#{cartMBean.list}" var="food" rows="10"
-                         paginator="true" selectionMode="single" rowKey="#{food.id}"
+            <p:dataTable id="table" value="#{cartMBean.list}" var="foods" rows="10"
+                         paginator="true" selectionMode="single" rowKey="#{foods.id}"
                          paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
                          rowsPerPageTemplate="5,10,{ShowAll|'All'}">
-                <p:column filterBy="#{food.food.name}" filterMatchMode="contains" sortBy="#{food.food.name}">
+                <p:column filterBy="#{foods.food.name}" filterMatchMode="contains" sortBy="#{foods.food.name}">
                     <f:facet name="header">Name</f:facet>
-                    <h:outputText value="#{food.food.name}"/>
+                    <h:outputText value="#{foods.food.name}"/>
                 </p:column>
 
-                <p:column filterBy="#{food.food.description}" filterMatchMode="contains" sortBy="#{food.food.description}">
+                <p:column filterBy="#{foods.food.description}" filterMatchMode="contains"
+                          sortBy="#{foods.food.description}">
                     <f:facet name="header">Description</f:facet>
-                    <h:outputText value="#{food.food.description}"/>
+                    <h:outputText value="#{foods.food.description}"/>
                 </p:column>
 
-                <p:column filterBy="#{food.food.price}" filterMatchMode="contains" sortBy="#{food.food.price}">
+                <p:column filterBy="#{foods.food.price}" filterMatchMode="contains" sortBy="#{foods.food.price}">
                     <f:facet name="header">Price</f:facet>
-                    <h:outputText value="#{food.food.price}">
+                    <h:outputText value="#{foods.food.price}">
                         <f:convertNumber type="currency" currencySymbol=" Ft" maxFractionDigits="0"/>
                     </h:outputText>
                 </p:column>
 
                 <p:column>
-                    <p:commandButton value="Remove" actionListener="#{cartMBean.removeFromCart(food)}"
+                    <p:commandButton value="Remove" actionListener="#{cartMBean.removeFromCart(foods)}"
                                      update=":mainForm :mainForm:growl mainForm:menuBar" styleClass="ui-button-info"/>
                 </p:column>
             </p:dataTable>
