--- a/courier-parent/courier-frontend/src/main/webapp/xhtml/index.xhtml
+++ b/courier-parent/courier-frontend/src/main/webapp/xhtml/index.xhtml
@@ -9,24 +9,7 @@
 <body>
 <h:form id="mainForm">
     <p:growl id="growl" showDetail="true" globalOnly="true"/>
-    <h:panelGroup rendered="#{!loggedInUserMBean.loggedIn}">
-        <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-            <h2 style="text-align: center;">Muszáj bejelentkezned!</h2>
-            <p:commandButton id="loginButton" oncomplete="PF('loginDialog').show()"
-                             value="Login" icon="pi pi-fw pi-sign-in"
-                             styleClass="ui-button-info" update="growl"/>
-        </div>
-    </h:panelGroup>
-    <p:menubar>
-        <f:facet name="options">
-            <p:button value="Cart" outcome="/xhtml/cart.xhtml" rendered="#{loggedInUserMBean.loggedIn}" styleClass="ui-button-info" style="margin-right: 10px"/>
-            <p:button value="Order History" outcome="/xhtml/history.xhtml" rendered="#{loggedInUserMBean.loggedIn}" styleClass="ui-button-info" style="margin-right: 10px"/>
-
-            <p:commandButton actionListener="#{loginRequestMBean.doLogout()}"
-                             rendered="#{loggedInUserMBean.loggedIn}" value="Logout" icon="pi pi-fw pi-sign-out"
-                             styleClass="ui-button-info" update="@form"/>
-        </f:facet>
-    </p:menubar>
+    <ui:include src="baseMenuForUser.xhtml"/>
 
     <h:panelGroup rendered="#{loggedInUserMBean.loggedIn}">
         <p:dataTable id="table" value="#{indexMBean.list}" var="index" rows="10"
@@ -53,7 +36,8 @@
             </p:column>
 
             <p:column>
-                <p:commandButton value="Add to Cart" rendered="#{!loggedInUserMBean.admin}" actionListener="#{indexMBean.add(index)}"
+                <p:commandButton value="Add to Cart" rendered="#{!loggedInUserMBean.admin}"
+                                 actionListener="#{indexMBean.add(index)}"
                                  update=":mainForm:growl" styleClass="ui-button-info"/>
             </p:column>
         </p:dataTable>
