--- a/courier-parent/courier-frontend/src/main/webapp/xhtml/loginCheck.xhtml
+++ b/courier-parent/courier-frontend/src/main/webapp/xhtml/loginCheck.xhtml
@@ -9,6 +9,9 @@
       <h2 style="text-align: center;">Muszáj bejelentkezned!</h2>
       <p:commandButton id="loginButton" oncomplete="PF('loginDialog').show()"
                        value="Login" icon="pi pi-fw pi-sign-in"
+                       styleClass="ui-button-info" update="growl" style="margin-right: 10px"/>
+      <p:commandButton id="regButton" oncomplete="PF('regDialog').show()"
+                       value="Register" icon="pi pi-fw pi-sign-in"
                        styleClass="ui-button-info" update="growl"/>
    </div>
 </h:panelGroup>
